# simpleNMRbrukerTools

./: LICENSE  README.md
simpleNMRbrukerTools/: MANIFEST.in  createJsonBrukerSimpleNMR_v1.py  exam_CMCse_1_assignments.json  main_gui-DA-FVFHG71LQ05D (2052).ipynb  main_gui.ipynb  main_gui.py  main_gui_1.ipynb  main_gui_simple.py  nmr_analysis_result-DA-FVFHG71LQ05D (2052).html  nmr_analysis_result.html  pyproject.toml  readBrukerSimpleNMR_v1.py  readme.md  run_converter.py  test_imports.py
simpleNMRbrukerTools/docs/: running_simpleNMRbruker.md  running_simpleNMRbruker_v2.md  simpleNMR_installation.md
simpleNMRbrukerTools/simpleNMRbruker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
simpleNMRbrukerTools/src/: __init__.py
simpleNMRbrukerTools/src/simpleNMRbrukerTools/: __init__.py  cli.py  config.py
simpleNMRbrukerTools/src/simpleNMRbrukerTools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
simpleNMRbrukerTools/src/simpleNMRbrukerTools/core/: data_reader.py  json_converter-DA-FVFHG71LQ05D (2052).py  json_converter.py  json_converter_2.py
simpleNMRbrukerTools/src/simpleNMRbrukerTools/gui/: guidataWarningDialogs.py
simpleNMRbrukerTools/src/simpleNMRbrukerTools/parsers/: integral_parser.py  parameter_parser.py  peak_parser.py
simpleNMRbrukerTools/src/simpleNMRbrukerTools/topspin_interface/: simpleNMR.prop  simpleNMR_txt.prop
simpleNMRbrukerTools/src/simpleNMRbrukerTools/topspin_programs/: simpleNMRbruker.py
simpleNMRbrukerTools/tests/: requirements-test.txt  test_json_converter.py  test_parameter_parser.py
